--- a/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
+++ b/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
@@ -581,9 +581,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11 (default)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -595,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
