--- a/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
+++ b/hw-04/HW-04_Perceptron_SVM_STUDENT.ipynb
@@ -14,8 +14,8 @@
    "id": "ed41a524-ade8-4277-bffc-7547379f9d22",
    "metadata": {},
    "source": [
-    "# <p style=\"text-align: right;\"> &#9989; Put your name here.</p>\n",
-    "# <p style=\"text-align: right;\"> &#9989; Put your _GitHub username_ here.</p>"
+    "# <p style=\"text-align: right;\"> &#9989; Khushi Lute.</p>\n",
+    "# <p style=\"text-align: right;\"> &#9989; khushilute</p>"
    ]
   },
   {
@@ -581,9 +581,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3.11 (default)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -595,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
